--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,18 @@ body {
 .elemento-lista {
   color: #4b1248;
   font-family: Verdana;
-  margin: 10px 0;
+  /* margin: 0px 0; SE COMENTA YA QUE HACÍA QUE NO ESTUVIESE ALINEADO*/
   border: 5px solid #4b1248;
   border-radius: 5px;
   padding: 0 5px;
   width: 400px;
-  margin: 20px
+  /*margin: 20px SE COMENTA YA QUE ESTÁ REPETIDO*/
 }
 
-.elemento-lista input {
+/*Se coloca guión a input*/
+.elemento-lista-input {
   border: none;
-  background: none;
+  background: white; /*!Se añade fondo de color*/
   color: #4b1248;
   font-family: Verdana;
   margin: 10px 0;
